--- a/templates/new-project.html
+++ b/templates/new-project.html
@@ -29,7 +29,7 @@
         <div class="left">
             <div class="editor" id="editor">
                 <!-- <textarea class="code-space editor" id="codeval showcode editor" autocomplete="off" name="code" spellcheck="true" placeholder="Enter Your Code"></textarea> -->
-                {{ filedt }}
+                <p>{{ text }}</p>
             </div>
 
             <label id="show-es-label" class="label-code" style="display:none">Error Simplified<span class="material-symbols-outlined rem-es" id="hide-es" style="color: #fff; cursor: pointer;">minimize</span></label>
